<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_drink"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yky.takeorder.DrinkActivity"
    android:background="@color/primary_color"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <TextView
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/x"
            android:layout_width="@dimen/square_box"
            android:layout_marginRight="20dp"
            android:layout_height="@dimen/square_box"
            android:layout_toLeftOf="@+id/undo"
            android:onClick="newOrder"
            android:text="X" />

        <Button
            android:id="@+id/undo"
            android:layout_width="@dimen/square_box"
            android:layout_height="@dimen/square_box"
            android:layout_alignParentRight="true"
            android:onClick="undo"
            android:text="undo" />
    </RelativeLayout>

    <TextView
        android:id="@+id/soft"
        style="@style/CategoryStyle"
        android:background="@color/category_numbers"
        android:text="@string/category_softdrink" />

    <TextView
        android:id="@+id/beer"
        style="@style/CategoryStyle"
        android:background="@color/category_beer"
        android:text="@string/category_beer" />

    <TextView
        android:id="@+id/red"
        style="@style/CategoryStyle"
        android:background="@color/category_redwine"
        android:text="@string/category_redwine" />

    <TextView
        android:id="@+id/white"
        style="@style/CategoryStyle"
        android:background="@color/category_whitewine"
        android:text="@string/category_whitewine" />

    <TextView
        android:id="@+id/small"
        style="@style/CategoryStyle"
        android:background="@color/category_small"
        android:text="@string/category_small" />

    <TextView
        android:id="@+id/spirits"
        style="@style/CategoryStyle"
        android:background="@color/category_spirits"
        android:text="@string/category_spirits" />


</LinearLayout>
